--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Install nasm
-        run: apt install nasm
+        run: sudo apt install nasm
 
       # Runs a single command using the runners shell
       - name: Build C integration test
